--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 /*My CSS*/
+
+body {
+    /*background-image: url();*/
+}
+
 .center{
     display: block;
     margin-left: auto;
@@ -18,6 +23,43 @@
     background-color: #f1f1f1;
     height: 100%;
 }
+
+.well {
+    background-color: gainsboro;
+}
+
+a {
+    font-size: large;
+}
+
+p {
+    font-size: large;
+}
+
+/*.col-md-6 {*/
+/*    border-style: solid;*/
+/*    border-color: red;*/
+/*}*/
+
+/*.col-md-2{*/
+/*    border-style: solid;*/
+/*    border-color: blue;*/
+/*}*/
+
+/*.col-md-8 {*/
+/*    border-style: solid;*/
+/*    border-color: red;*/
+/*}*/
+
+/*.col-sm-2{*/
+/*    border-style: solid;*/
+/*    border-color: blue;*/
+/*}*/
+
+/*.row {*/
+/*    border-style: dashed;*/
+/*    border-color: yellow;*/
+/*}*/
 
 /* Set black background color, white text and some padding */
 footer {
