Added to projects. Took awhile to figure out how to get the scroll bar working how I wanted and at the right height.

--- a/style.css
+++ b/style.css
@@ -2,13 +2,21 @@
 
 body {
     background-image: url("attractive-backdrop-background-988872.jpg");
-    height: 100%
+    /*height: 100%*/
 }
 
 .mainDiv {
     /*font-family: 'Slabo 27px', serif;*/
     font-family: 'Oswald', sans-serif;
-    padding-bottom: 100px;    /* height of footer */
+    /*padding-bottom: 100px;    !* height of footer *!*/
+    /*height: 800px;*/
+}
+
+#mainWindow {
+    /*display:block;*/
+    max-height: 70vh;
+    background-color: rgba(255,255,255, 0.15);
+    padding-bottom: 0px;
 }
 
 .mainDiv h1 {
@@ -21,7 +29,8 @@ body {
 
 footer{
     /*height: 100px;*/
-    background-color: transparent;
+    /*background-color: transparent;*/
+    background-color: rgba(255,255,255, 1);
     font-size: 16pt;
     width:100%;
     position: absolute;
@@ -51,16 +60,17 @@ footer{
 #marker {
     font-family: 'Permanent Marker', cursive;
     font-size: 72pt;
+    /*text-decoration: underline;*/
 }
 
 /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-.row.content {height: 450px}
+/*.row.content {height: 450px}*/
 
 /* Set gray background color and 100% height */
 .sidenav {
     padding-top: 20px;
     background-color: #f1f1f1;
-    height: 100%;
+    /*height: 100%;*/
 }
 
 .well {
@@ -68,6 +78,11 @@ footer{
     /*background-color: rgba(3,45,90, 0.2);*/
     background-color: rgba(255,255,255, 0.5);
     border-color: black;
+}
+
+.textDesc {
+    font-size: 12pt;
+    text-align: left;
 }
 
 /*a {*/
@@ -92,6 +107,12 @@ p {
 [class*=col-] {
     background-color: transparent;
 }
+
+/*.pre-scrollable {*/
+    /*height: 800px;*/
+    /*overflow-y: scroll;*/
+    /*overflow-y: auto;*/
+/*}*/
 
 /*.col-md-6 {*/
 /*    border-style: solid;*/
