--- a/style.css
+++ b/style.css
@@ -2,18 +2,16 @@
 
 body {
     background-image: url("attractive-backdrop-background-988872.jpg");
-    /*height: 100%*/
 }
 
 .mainDiv {
-    /*font-family: 'Slabo 27px', serif;*/
     font-family: 'Oswald', sans-serif;
-    /*padding-bottom: 100px;    !* height of footer *!*/
-    /*height: 800px;*/
+    padding-bottom: 100px;    /* height of footer */
 }
 
 #mainWindow {
     /*display:block;*/
+    overflow: auto;
     max-height: 70vh;
     background-color: rgba(255,255,255, 0.15);
     padding-bottom: 0px;
@@ -28,8 +26,6 @@ body {
 }
 
 footer{
-    /*height: 100px;*/
-    /*background-color: transparent;*/
     background-color: rgba(255,255,255, 1);
     font-size: 16pt;
     width:100%;
@@ -43,12 +39,11 @@ footer{
     margin-left: auto;
     margin-right: auto;
 }
+
 /* Remove the navbar's default margin-bottom and rounded borders */
 .navbar {
-    /*margin-bottom: 0;*/
     border-radius: 0;
     font-family: 'Amatic SC', cursive;
-    /*font-weight: bold;*/
     font-size: 22pt;
     color: black;
 }
@@ -60,7 +55,6 @@ footer{
 #marker {
     font-family: 'Permanent Marker', cursive;
     font-size: 72pt;
-    /*text-decoration: underline;*/
 }
 
 /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
@@ -70,12 +64,10 @@ footer{
 .sidenav {
     padding-top: 20px;
     background-color: #f1f1f1;
-    /*height: 100%;*/
+    height: 100%;
 }
 
 .well {
-    /*background-color: rgba(29,85,144, 0.3);*/
-    /*background-color: rgba(3,45,90, 0.2);*/
     background-color: rgba(255,255,255, 0.5);
     border-color: black;
 }
@@ -85,13 +77,6 @@ footer{
     text-align: left;
 }
 
-/*a {*/
-/*    !*font-family: 'Amatic SC', cursive;*!*/
-/*    !*font-weight: bold;*!*/
-/*    !*font-size: 22pt;*!*/
-/*    !*color: black;*!*/
-/*}*/
-
 p {
     font-family: 'Oswald', sans-serif;
 }
@@ -100,45 +85,12 @@ p {
     font-size: 28pt;
     font-family: 'Amatic SC', cursive;
     font-weight: bold;
-    /*font-size: 22pt;*/
     color: black;
 }
 
 [class*=col-] {
     background-color: transparent;
 }
-
-/*.pre-scrollable {*/
-    /*height: 800px;*/
-    /*overflow-y: scroll;*/
-    /*overflow-y: auto;*/
-/*}*/
-
-/*.col-md-6 {*/
-/*    border-style: solid;*/
-/*    border-color: red;*/
-/*}*/
-
-/*.col-md-2{*/
-/*    border-style: solid;*/
-/*    border-color: blue;*/
-/*}*/
-
-/*.col-md-8 {*/
-/*    border-style: solid;*/
-/*    border-color: red;*/
-/*}*/
-
-/*.col-sm-2{*/
-/*    border-style: solid;*/
-/*    border-color: blue;*/
-/*}*/
-
-/*.row {*/
-/*    border-style: dashed;*/
-/*    border-color: yellow;*/
-/*}*/
-
 
 /* On small screens, set height to 'auto' for sidenav and grid */
 @media screen and (max-width: 767px) {
